--- a/language/i18n_ja.json
+++ b/language/i18n_ja.json
@@ -4230,5 +4230,8 @@
     "p_check_email": "メールを確認してください",
     "CL_CF_FM_storage_appliance": "ストレージアプライアンス",
     "storage_appliance": "ストレージアプライアンス",
-    "CL_CF_FM_quickly_select_food": "冷蔵庫にある食品を素早く選択"
+    "CL_CF_FM_quickly_select_food": "冷蔵庫にある食品を素早く選択",
+    "CL_CF_FM_add_selected_items_to_ref": "選択したアイテムをREFに追加",
+    "CL_CF_FM_skip_to_library": "ライブラリへスキップ",
+    "sch_name": "スケジューラ名"
 }
