--- a/language/i18n_el.json
+++ b/language/i18n_el.json
@@ -4230,5 +4230,8 @@
     "p_check_email": "Ελέγξτε το email σας",
     "CL_CF_FM_storage_appliance": "Συσκευή αποθήκευσης",
     "storage_appliance": "ΣΥΣΚΕΥΗ ΑΠΟΘΗΚΕΥΣΗΣ",
-    "CL_CF_FM_quickly_select_food": "Επιλέξτε γρήγορα υπάρχοντα τρόφιμα στο ψυγείο"
+    "CL_CF_FM_quickly_select_food": "Επιλέξτε γρήγορα υπάρχοντα τρόφιμα στο ψυγείο",
+    "CL_CF_FM_add_selected_items_to_ref": "ΠΡΟΣΘΗΚΗ ΕΠΙΛΕΓΜΕΝΩΝ ΣΤΟΙΧΕΙΩΝ ΣΤΗΝ ΑΝΑΦ",
+    "CL_CF_FM_skip_to_library": "ΜΕΤΑΒΑΣΗ ΣΤΗ ΒΙΒΛΙΟΘΗΚΗ",
+    "sch_name": "ΟΝΟΜΑ ΠΡΟΓΡΑΜΜΑΤΙΣΤΗ"
 }
