--- a/language/i18n_en.json
+++ b/language/i18n_en.json
@@ -4230,5 +4230,8 @@
     "p_check_email": "Please check your email",
     "CL_CF_FM_storage_appliance": "Storage Appliance",
     "storage_appliance": "STORAGE APPLIANCE",
-    "CL_CF_FM_quickly_select_food": "Quickly select existing food in the refrigerator"
+    "CL_CF_FM_quickly_select_food": "Quickly select existing food in the refrigerator",
+    "CL_CF_FM_add_selected_items_to_ref": "ADD SELECTED ITEMS TO REF",
+    "CL_CF_FM_skip_to_library": "SKIP  TO THE LIBRARY",
+    "sch_name": "SCHEDULER NAME"
 }
