--- a/language/i18n_ro.json
+++ b/language/i18n_ro.json
@@ -4230,5 +4230,8 @@
     "p_check_email": "Vă rugăm să vă verificați e-mailul",
     "CL_CF_FM_storage_appliance": "Aparat de depozitare",
     "storage_appliance": "APARATUL DE DEPOZITARE",
-    "CL_CF_FM_quickly_select_food": "Selectați rapid alimentele existente în frigider"
+    "CL_CF_FM_quickly_select_food": "Selectați rapid alimentele existente în frigider",
+    "CL_CF_FM_add_selected_items_to_ref": "ADAUGĂ ARTICOLE SELECTATE LA REF",
+    "CL_CF_FM_skip_to_library": "SARE LA BIBLIOTECĂ",
+    "sch_name": "Numele planificatorului"
 }
