--- a/language/i18n_sl.json
+++ b/language/i18n_sl.json
@@ -4230,5 +4230,8 @@
     "p_check_email": "Preverite svojo e-pošto",
     "CL_CF_FM_storage_appliance": "Naprava za shranjevanje",
     "storage_appliance": "NAPRAVA ZA SHRANJEVANJE",
-    "CL_CF_FM_quickly_select_food": "Hitro izberite obstoječo hrano v hladilniku"
+    "CL_CF_FM_quickly_select_food": "Hitro izberite obstoječo hrano v hladilniku",
+    "CL_CF_FM_add_selected_items_to_ref": "DODAJ IZBRANE PREDMETE REF",
+    "CL_CF_FM_skip_to_library": "PRESKOČITE V KNJIŽNICO",
+    "sch_name": "IME RAZPOREDNIKA"
 }
