--- a/language/i18n_uk.json
+++ b/language/i18n_uk.json
@@ -4230,5 +4230,8 @@
     "p_check_email": "Будь ласка, перевірте свою електронну пошту",
     "CL_CF_FM_storage_appliance": "Прилад зберігання",
     "storage_appliance": "ПРИЛАД ЗБЕРІГАННЯ",
-    "CL_CF_FM_quickly_select_food": "Швидко виберіть продукти, які є в холодильнику"
+    "CL_CF_FM_quickly_select_food": "Швидко виберіть продукти, які є в холодильнику",
+    "CL_CF_FM_add_selected_items_to_ref": "ДОДАТИ ВИБРАНІ ПОЗИЦІЇ ДО ПОЗ",
+    "CL_CF_FM_skip_to_library": "ПРОПУСТИТИ ДО БІБЛІОТЕКИ",
+    "sch_name": "ІМ'Я ПЛАНОВИКА"
 }
