--- a/language/i18n_zh.json
+++ b/language/i18n_zh.json
@@ -4230,5 +4230,8 @@
     "p_check_email": "请查看你的电子邮件",
     "CL_CF_FM_storage_appliance": "存储设备",
     "storage_appliance": "存储设备",
-    "CL_CF_FM_quickly_select_food": "快速选择冰箱中现有的食物"
+    "CL_CF_FM_quickly_select_food": "快速选择冰箱中现有的食物",
+    "CL_CF_FM_add_selected_items_to_ref": "添加选定项目至参考",
+    "CL_CF_FM_skip_to_library": "跳到图书馆",
+    "sch_name": "调度程序名称"
 }
