--- a/language/i18n_fr.json
+++ b/language/i18n_fr.json
@@ -4230,5 +4230,11 @@
     "p_check_email": "Veuillez vérifier votre email",
     "CL_CF_FM_storage_appliance": "Appareil de stockage",
     "storage_appliance": "APPAREIL DE STOCKAGE",
-    "CL_CF_FM_quickly_select_food": "Sélectionnez rapidement les aliments existants dans le réfrigérateur"
+    "CL_CF_FM_quickly_select_food": "Sélectionnez rapidement les aliments existants dans le réfrigérateur",
+    "CL_CF_FM_add_selected_items_to_ref": "AJOUTER LES ÉLÉMENTS SÉLECTIONNÉS À LA RÉFÉRENCE",
+    "CL_CF_FM_skip_to_library": "Passer à la bibliothèque",
+    "sch_name": "NOM DU PLANIFICATEUR",
+    "h_use_air_care": "Comment utiliser la protection de l'air",
+    "h_manage_room": "Comment gérer votre chambre",
+    "h_select_preset_mode": "Comment sélectionner un mode prédéfini"
 }
