--- a/language/i18n_ar.json
+++ b/language/i18n_ar.json
@@ -4230,5 +4230,11 @@
     "p_check_email": "يرجى التحقق من بريدك الإلكتروني",
     "CL_CF_FM_storage_appliance": "أجهزة تخزين",
     "storage_appliance": "أجهزة التخزين",
-    "CL_CF_FM_quickly_select_food": "حدد بسرعة الأطعمة الموجودة في الثلاجة"
+    "CL_CF_FM_quickly_select_food": "حدد بسرعة الأطعمة الموجودة في الثلاجة",
+    "CL_CF_FM_add_selected_items_to_ref": "إضافة العناصر المحددة إلى المرجع",
+    "CL_CF_FM_skip_to_library": "انتقل إلى المكتبة",
+    "sch_name": "اسم المجدول",
+    "h_use_air_care": "كيفية استخدام العناية بالهواء",
+    "h_manage_room": "كيفية إدارة غرفتك",
+    "h_select_preset_mode": "كيفية تحديد وضع الإعداد المسبق"
 }
